YUK-20183 Support new RfnConditionDataTypes for REMOTE_METER_CONFIGURATION_FAILURE event Added simulator support for Meter Configuration event items Modernized Event Archive page and RfnTestEvent